--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <!-- <li><a class="nav-link scrollto" href="#about">Events</a></li> -->
           <li><a class="nav-link scrollto" href="#announcements">Annoucements</a></li>
           <li><a class="nav-link scrollto " href="#helpful-information">Information</a></li>
-          <li><a class="nav-link scrollto" href="https://webstores.activenetwork.com/school-software/sphs_asb_online_sx0w/">Student Bank</a></li>
+          <li><a class="nav-link scrollto" href="https://webstores.activenetwork.com/school-software/sphs_asb_online_sx0w/">Webstore</a></li>
           <li class="dropdown"><a href="#team-com"><span>Leadership Class</span> <i class="#team"></i></a>
             <ul>
               <!-- <li><a href="#team">2021-2022</a></li> -->
@@ -343,7 +343,7 @@
                 <p>Lost and found, Community service forms, Senior Privilege Card, Ooter forms</p>
               <h8>SAC Room</h8>
                 <p>Club forms: Activity Proposal, Revenue Potential, Club Minutes, Poster approvals, Voting ballot submissions, Commissioners and Class Officers</h8>
-              <h8>Student bank </h8>
+              <h8>Student Bank</h8>
                 <p>SAC/ID Cards, Financial forms: Check Request, Purchase Order, Deposit Form, Dance tickets, Yearbook and Tiger Guide purchases</p>
         </div>
 
