--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Links</a></li>
+          <li><a class="nav-link scrollto" href="https://southpasadena.voting4schools.com/">Vote</a></li>
           <!-- <li><a class="getstarted scrollto" href="#about">Learn More</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -347,6 +348,17 @@
                 <p>Club forms: Activity Proposal, Revenue Potential, Club Minutes, Poster approvals, Voting ballot submissions, Commissioners and Class Officers</h8>
 
         </div>
+
+    <section id="clients" class="clients">
+      <div class="container">
+            
+        <div class="section-title">
+              <h2>ASB Calendar</h2>
+                            
+              <iframe src="https://calendar.google.com/calendar/embed?src=dkdv8eg12p0hklnilnp4p1g5qo%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>           
+
+            </div> </div> </section>
+
 
     <section id="clients" class="clients">
       <div class="container">
