--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         <div class="carousel-item">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">Past: Color Day</h2>
-              <p class="animate__animated animate__fadeInUp">Color Day is the biggest spirit event at SPHS! Students, teachers, and administration dress up in creative costumes in our school colors: orange and black. After over a year of distance-learning, we want to reignite our school spirit and unify our school community through Color Day!</p>
+              <h2 class="animate__animated animate__fadeInDown">No Upcoming Events</h2>
+              <p class="animate__animated animate__fadeInUp"></p>
             </div>
           </div>
         </div>
