--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Homecoming Court 1st Round of Voting</h2>
-              <p class="animate__animated animate__fadeInUp">The first round of voting for the 2021 Homecoming Court opens Tuesday (10/5) at 7:30AM and closes on Wednesday (10/6) at 11:15AM!! Vist the link in @sphsasb's bio to vote.</p>       
+              <p class="animate__animated animate__fadeInUp">The first round of voting for the 2021 Homecoming Court opens Tuesday (10/5) at 7:30AM and closes on Wednesday (10/6) at 11:15AM!! Visit the link located at the top right to vote.</p>       
               <!-- <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
             </div>
           </div>
