--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <!-- <li><a class="nav-link scrollto" href="#about">Events</a></li> -->
           <li><a class="nav-link scrollto" href="#announcements">Annoucements</a></li>
           <li><a class="nav-link scrollto " href="#helpful-information">Information</a></li>
-          <li><a class="nav-link scrollto" href="https://webstores.activenetwork.com/school-software/sphs_asb_online_sx0w/">Webstore</a></li>
+          <li><a class="nav-link scrollto" href="https://webstores.activenetwork.com/school-software/sphs_asb_online_sx0w/"target="_blank">Webstore</a></li>
           <li class="dropdown"><a href="#team-com"><span>Leadership Class</span> <i class="#team"></i></a>
             <ul>
               <!-- <li><a href="#team">2021-2022</a></li> -->
@@ -90,7 +90,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Links</a></li>
-          <li><a class="nav-link scrollto" href="https://southpasadena.voting4schools.com/">Vote</a></li>
+          <li><a class="nav-link scrollto" href="https://southpasadena.voting4schools.com/"target="_blank">Vote</a></li>
           <!-- <li><a class="getstarted scrollto" href="#about">Learn More</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -566,9 +566,9 @@
             </div>
           </div>
 
-        </div> <!-- end of row -->
+         <!-- end of row -->
 
-        <div class="row"> <!-- new row-->
+
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/team/Deanna.jpg" alt="">
@@ -602,7 +602,7 @@
             </div>
           </div>
 
-
+        </div>
         </div> <!-- end of row -->
         <div class="row"> <!-- new row-->
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
