--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
             </div>
           </div>
 
-         <!-- end of row -->
+         
 
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
@@ -602,9 +602,8 @@
             </div>
           </div>
 
-        </div>
-        </div> <!-- end of row -->
-        <div class="row"> <!-- new row-->
+
+          <!-- <div class="row"> new row -->
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/team/Andrew.jpg" alt="">
@@ -638,9 +637,6 @@
             </div>
           </div>
 
-
-        </div> <!-- end of row -->
-        <div class="row"> <!-- new row-->
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/team/Nikita.jpg" alt="">
@@ -686,6 +682,7 @@
           </div>
 
         </div> <!-- end of row -->
+      </div> <!--end of container--> 
       </section>
 
       <section id="team-seniors" class="team section-bg">
