--- a/index.html
+++ b/index.html
@@ -566,9 +566,6 @@
             </div>
           </div>
 
-         
-
-
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/team/Deanna.jpg" alt="">
@@ -601,9 +598,8 @@
               </p>
             </div>
           </div>
-
-
-          <!-- <div class="row"> new row -->
+        </div> <!--end of row-->
+        <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/team/Andrew.jpg" alt="">
@@ -670,6 +666,8 @@
               </p>
             </div>
           </div>
+        </div>
+        <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/team/audrey.jpg" alt="">
@@ -680,7 +678,6 @@
               </p>
             </div>
           </div>
-
         </div> <!-- end of row -->
       </div> <!--end of container--> 
       </section>
