--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/crLNfpQVlCQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br>
-<li><a href="https://www.youtube.com/c/SPHSASB">YouTube Channel</a></li>
-<li><a href="https://www.tiktok.com/@sphsasb?">ASB TikTok</a></li>
+<li><a href="https://www.youtube.com/c/SPHSASB/featured" "target="_blank">YouTube Channel</a></li>
+<li><a href="https://www.tiktok.com/@sphsasb?" "target="_blank">ASB TikTok</a></li>
         </div> </div> </section>
 
                      
