added ava d pic

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
               <div class="member">
-                <img src="assets/img/team/ava.jpg" alt="">
+                <img src="assets/img/team/avad.jpg" alt="">
                 <h4>Ava D</h4>
                 <span>Commissioner of School and Community</span>
                 <p>
