--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
     <div class="section-title">
         <h2>Homecoming Spirit Week</h2>
 
+<div class="center">
         <div class="gallery">
             <img src="assets/img/team/hoco/hoco-day-1.jpg" alt="" width="600" height="400">
         </div>
@@ -178,8 +179,7 @@
         <div class="gallery">
             <img src="assets/img/team/hoco/hoco-day-5.jpg" alt="" width="600" height="400">
         </div>
-
-
+      </div>
     </div>
   </div>
 </section>
