--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
         <div class="carousel-item active">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">✨HOMECOMING SPIRIT WEEK IS NEXT WEEK!!!✨ </h2>
-              <p class="animate__animated animate__fadeInUp">The theme is TOTAL L.A.🌆⭐️🏝Every student will participate in dressing up for each L.A.-themed spirit day, but one grade will host a lunchtime activity in their grade’s “lunch area” (starting with freshmen on Monday and ending with seniors on Thursday)! Friday is TIGER PRIDE day, so be sure to dress in our 🖤school colors🧡 for school and the BIG HOCO FOOTBALL GAME on Friday (10/22)!!</p>       
+              <h2 class="animate__animated animate__fadeInDown">🎉HOMECOMING DANCE UPDATE!!🎉  </h2>
+              <p class="animate__animated animate__fadeInUp">We’ve gratefully been able to expand the venue at the Arroyo Seco and ticket sales have now been extended through Wednesday (10/20)!! They will be sold at the student bank during lunch. Shoutout to your junior class officers for working super hard to put together an amazing Homecoming dance!!❤️🎉🕺🏻</p>       
               <!-- <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
             </div>
           </div>
@@ -122,8 +122,8 @@
         <div class="carousel-item">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">Pink Out Spirit Day</h2>
-              <p class="animate__animated animate__fadeInUp">This Friday (10/15) is a 💓💓PINK OUT SPIRIT DAY!!💓💓 Dress up in pink to honor Breast Cancer Awareness month!💗🎗</p>
+              <h2 class="animate__animated animate__fadeInDown">Auditions for Homecoming Picnic</h2>
+              <p class="animate__animated animate__fadeInUp">Are you interested in preforming during Homecoming Picnic this Friday?? Submit your video auditions to the link in @sphsnoontime bio by Thursday (10/21) at 3:59PM!! We can’t wait to see all of your wonderful & talented submissions!❤️🎶🎉💃🕺🏻</p>
             </div>
           </div>
         </div>
