--- a/index.html
+++ b/index.html
@@ -156,10 +156,11 @@
 <section id="clients" class="clients">
   <div class="container">
     <div class="section-title">
-        <h2>Homecoming Spirit Week</h2>
+        <h2>Homecoming Dance Pictures</h2>
+        <li><a href="https://www.jamesjontzphotography.com/SPHS/SPHS-2021-2022/2021-Homecoming-Dance/" target="_blank">Click here.</a></li>
 
 
-        <div class="gallery">
+        <!-- <div class="gallery">
             <img class="center" src="assets/img/team/hoco/hoco-day-1.jpg" alt="" width="600" height="400">
         </div>
         
@@ -178,11 +179,12 @@
 
         <div class="gallery">
             <img class="center" src="assets/img/team/hoco/hoco-day-5.jpg" alt="" width="600" height="400">
-        </div>
+        </div> -->
       </div>
     </div>
 </section>
 
+<!--CONTENT-->
 <main id="main">
     <section id="announcements" class="portfolio">
       <div class="container">
