--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         <div class="carousel-item">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">Reflection Art Contest</h2>
-              <p class="animate__animated animate__fadeInUp">CALLING ALL SPHS STUDENTS! Showcase your creativity & talent by expressing your interpretation of this year’s Reflection Art Contest theme: I Will Change the World By🌎🌎 Visit sphsptsa.net or click the link in bio for more info!! DEADLINE IS NOVEMBER 1✨</p>
+              <h2 class="animate__animated animate__fadeInDown">THE HEALTH & WELLNESS SURVEY IS NOW OPEN! </h2>
+              <p class="animate__animated animate__fadeInUp">Please click the link in bio to fill out this important form! Your responses help your Health & Wellness officers set goals for future projects surrounding the improvement of physical, mental, and sexual health of our student body❤️❤️ Closes Friday 11/5.</p>
               <!-- <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
             </div>
           </div>
