--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Football Playoffs Friday 11/5</h2>
-              <p class="animate__animated animate__fadeInUp">TIGERS!! Tickets for this Friday’s playoff game are on sale NOW! Click the               <li><a href="https://gofan.co/app/events/435960?schoolId=CA19053" target="_blank">HERE</a></li> to purchase!! No cash sales be taken— you must get your tickets online, in advance. Show up and support!!🧡🖤🐯🐅</p>    
+              <p class="animate__animated animate__fadeInUp">TIGERS!! Tickets for this Friday’s playoff game are on sale NOW! Click <li><a href="https://gofan.co/app/events/435960?schoolId=CA19053" target="_blank">HERE</a></li> to purchase!! No cash sales be taken— you must get your tickets online, in advance. Show up and support!!🧡🖤🐯🐅</p>    
    
               <!-- <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
             </div>
