--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">THE HEALTH & WELLNESS SURVEY IS NOW OPEN! </h2>
-              <p class="animate__animated animate__fadeInUp">Please click the link in bio to fill out this important form! Your responses help your Health & Wellness officers set goals for future projects surrounding the improvement of physical, mental, and sexual health of our student body❤️❤️ Closes Friday 11/5.</p>
+              <p class="animate__animated animate__fadeInUp">Please click on Links above to fill out this important form! Your responses help your Health & Wellness officers set goals for future projects surrounding the improvement of physical, mental, and sexual health of our student body❤️❤️ Closes Friday 11/5.</p>
               <!-- <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
             </div>
           </div>
@@ -189,6 +189,7 @@
                   <li><a href="https://docs.google.com/spreadsheets/d/10G20CJcimoNpCyroG5G_i-O_1jAO6uVmxk0DonBtnYs/edit?usp=sharing" target="_blank">2021-2022 Club List</a></li>
                   <li><a href="https://gofan.co/app/events/435960?schoolId=CA19053" target="_blank">11/5 FOOTBALL GAME Tickets</a></li>    
                   <li><a href="https://www.jamesjontzphotography.com/SPHS/SPHS-2021-2022/2021-Homecoming-Dance/" target="_blank">Homecoming Dance Pictures</a></li>
+                  <li><a href="http://www.tinyurl.com/sphswellnesssurvey" target="_blank">Health and Wellness Survey</a></li>
           <!-- <div class="gallery">
               <img class="center" src="assets/img/team/hoco/hoco-day-1.jpg" alt="" width="600" height="400">
           </div>
