--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       </section>
 
   <!--hoco spirit week-->
-  <section id="clients" class="clients">
+  <section id="contact" class="contact">
     <div class="container">
       <div class="section-title">
           <h2>Links</h2>
