--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">SPHS presents...Sense and Sensibility</h2>
-              <p class="animate__animated animate__fadeInUp">Tickets on sale for $15! Click on Webstore link above and buy tickets under Drama Department. Showtimes: 11/12-14 @5:30</p>
+              <p class="animate__animated animate__fadeInUp">Tickets on sale for $15! Click on Links above to buy tickets. Showtimes: 11/12-14 @5:30</p>
             </div>
           </div>
         </div>
@@ -190,6 +190,11 @@
                   <li><a href="https://gofan.co/app/events/435960?schoolId=CA19053" target="_blank">11/5 FOOTBALL GAME Tickets</a></li>    
                   <li><a href="https://www.jamesjontzphotography.com/SPHS/SPHS-2021-2022/2021-Homecoming-Dance/" target="_blank">Homecoming Dance Pictures</a></li>
                   <li><a href="http://www.tinyurl.com/sphswellnesssurvey" target="_blank">Health and Wellness Survey</a></li>
+                  <li><a href="https://webstores.activenetwork.com/school-software/sphs_asb_online_sx0w/index.php?l=product_list&c=67" target="_blank">Sense and Sensibility Tickets</a></li>
+
+
+                  
+
           <!-- <div class="gallery">
               <img class="center" src="assets/img/team/hoco/hoco-day-1.jpg" alt="" width="600" height="400">
           </div>
