--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                   <li><a href="https://gofan.co/app/events/435960?schoolId=CA19053" target="_blank">11/5 FOOTBALL GAME Tickets</a></li>    
                   <li><a href="https://www.jamesjontzphotography.com/SPHS/SPHS-2021-2022/2021-Homecoming-Dance/" target="_blank">Homecoming Dance Pictures</a></li>
                   <li><a href="http://www.tinyurl.com/sphswellnesssurvey" target="_blank">Health and Wellness Survey</a></li>
-                  <li><a href="https://webstores.activenetwork.com/school-software/sphs_asb_online_sx0w/index.php?l=product_list&c=67" target="_blank">Sense and Sensibility Tickets</a></li>
+                  <li><a href="https://docs.google.com/document/d/1b-s666E5ILUBAp3dh5vaFO9WxXWAoqouPwGJ1sD0iA8/edit?usp=sharing" target="_blank">PA Transcript December 13, 2021</a></li>
 
 
                   
