--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
                   <li><a href="https://sites.google.com/spusd.net/tigerbulletin/daily-bulletin" target="_blank">Daily Bulletin</a></li>
                   <li><a href="https://docs.google.com/spreadsheets/d/10G20CJcimoNpCyroG5G_i-O_1jAO6uVmxk0DonBtnYs/edit?usp=sharing" target="_blank">2021-2022 Club List</a></li>   
                   <li><a href="https://www.jamesjontzphotography.com/SPHS/SPHS-2021-2022/2021-Homecoming-Dance/" target="_blank">Homecoming Dance Pictures</a></li>
-                  <li><a href="https://docs.google.com/document/d/1b-s666E5ILUBAp3dh5vaFO9WxXWAoqouPwGJ1sD0iA8/edit?usp=sharing" target="_blank">PA Transcript December 13, 2021</a></li>
+                  <li><a href="https://drive.google.com/file/d/1yU4bFTtmV6fMUBZw1IUxq6hY_cnLV_8V/view?usp=sharing" target="_blank">Powerpuff packet</a></li>
+                  <li><a href="https://drive.google.com/file/d/1MU9psiUY_cIUFCyMZnko9NpsI9IBgbWN/view?usp=sharing" target="_blank">Powerpuff forms</a></li>
 
 
                   
