--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
           </li>
           <li><a class="nav-link scrollto" href="#contact">Links</a></li>
           <li><a class="nav-link scrollto" href="https://southpasadena.voting4schools.com/"target="_blank">Vote</a></li>
+          <li><a class="nav-link scrollto" href="#election">Elections</a></li>
           <!-- <li><a class="getstarted scrollto" href="#about">Learn More</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
