--- a/index.html
+++ b/index.html
@@ -1522,12 +1522,19 @@ Web Coordinator
         </div>
       </div>
     </section><!-- End 2015-16 Section -->
-    <section id="election" class="team section-bg">
-      <div class="section-title">
-        <h2>Elections 2022-2023</h2>
-      </div>
+  
+    <section id="team" class="team section-bg">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Elections 2022-2023</h2>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+        </div>
+
+        <section id="team-com" class="team section-bg">
+
       <div class="row"> <!-- new row-->
-        <h3>Commissioners Candidates</h3>
+        <h3>Commissioner Candidates</h3>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="member">
             <img src="assets/img/team/ava.jpg" alt="">
