--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           <h2>Helpful Information</h2>
             <h3>Where to Go</h3>
               <h8>Counseling/Career Center</h8>
-                <p>Work permits, Counselors (Academic and ROP)</p>
+                <p>Work permits and Counselors (Academic and ROP)</p>
               <h8>Attendance Office</h8>
                 <p>Absence excuse notes, tardy sweep admits, off-campus permits</p>
               <h8>Student Services Office</h8>
